--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,7 @@
 {
-
+  "AppSettings": {
+    "Token": "super secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DatingApp;Integrated Security=True;MultipleActiveResultSets=True;"
   },
@@ -8,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "de2pmwmbl",
+    "ApiKey": "551789387946969",
+    "ApiSecret": "fm69RmkTPCcLvt-UD346kCAAlyE"
+  }
 }
